[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/WorldManagement/MeshTracer.tres.gd" type="Script" id=1]
[ext_resource path="res://addons/WorldManagement/MeshTracer.gd" type="Script" id=2]

[sub_resource type="SphereMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
flags_vertex_lighting = true
albedo_color = Color( 0, 0.737255, 0.254902, 0.301961 )
emission_enabled = true
emission = Color( 0.152941, 0.760784, 0.117647, 1 )
emission_energy = 1.55
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereShape" id=3]
radius = 0.198192

[sub_resource type="Curve3D" id=4]
_data = {
"points": PoolVector3Array(  ),
"tilts": PoolRealArray(  )
}

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="KinematicBody" type="KinematicBody" parent="."]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="KinematicBody"]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="KinematicBody"]
shape = SubResource( 3 )

[node name="Front" type="RayCast" parent="KinematicBody"]
enabled = true
cast_to = Vector3( 0, 0, 0.5 )

[node name="Left" type="RayCast" parent="KinematicBody"]
enabled = true
cast_to = Vector3( 0.5, 0, 0 )

[node name="Back" type="RayCast" parent="KinematicBody"]
enabled = true
cast_to = Vector3( 0, 0, -0.5 )

[node name="Right" type="RayCast" parent="KinematicBody"]
enabled = true
cast_to = Vector3( -0.5, 0, 0 )

[node name="Floor_center" type="RayCast" parent="KinematicBody"]
enabled = true

[node name="Floor_left" type="RayCast" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0 )
enabled = true

[node name="Floor_right" type="RayCast" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0 )
enabled = true

[node name="Floor_back" type="RayCast" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )
enabled = true

[node name="Floor_front" type="RayCast" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )
enabled = true

[node name="Path" type="Path" parent="."]
curve = SubResource( 4 )
